--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,29 @@
 <header>
-	<%= image_tag("../images/logo.gif", :alt => "BingWen", :class => "round") %>
-	<nav class="round">
-		<ul>
-			<li><%= link_to "home", 'home' %></li>
-			<li><%= link_to "help", 'help' %></li>
-			<li><%= link_to "sign in", '#' %></li>
-		</ul>
-	</nav>
+		<div class ="person">
+            <div>
+                <ul class="menu">
+                    <li><a href="sc.chinaz.com" class="nav">我的家园</a></li>
+                    <li><a href="sc.chinaz.com" class="nav">个人中心</a></li>
+                    <li><a href="sc.chinaz.com" class="nav">登陆</a></li>
+                    <li><a href="sc.chinaz.com" class="nav">注册</a></li>
+                </ul>
+            </div>
+        </div>
+
+		<div id="top_banner">
+       		<div id="left_logo"><a href="index.html"><img src="images/logo.gif" border="0" alt="logo" /></a></div>
+        </div>
+        
+        <div id="page_content">
+            <div>
+                <ul class="menu">
+                    <li><a href="sc.chinaz.com" class="nav">首页</a></li>
+                    <li><a href="sc.chinaz.com" class="nav_even">社区新闻</a></li>
+                    <li><a href="sc.chinaz.com" class="nav">社区服务</a></li>
+                    <li><a href="sc.chinaz.com" class="nav_even">业委会</a></li>
+                    <li><a href="sc.chinaz.com" class="nav">社区论坛</a></li>
+                    <li><a href="sc.chinaz.com" class="nav_even">事物公决</a></li>
+                </ul>
+            </div>
 </header>
+			
