--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,63 @@
-<h1>Bingwen</h1>
-<p>
-	<a href="http://127.0.0.1:8080">Neighborhood BinWen</a>
-</p>
-<%= link_to "Sign up now !",users_signup_path,:class=>"signup_button round" %>
+           
+<div id="main_content">           
+   <div id="page_content">
+          <div id="left_section">
+          	<div class="title">滨文苑，欢迎您！</div>
+              <div class="text_content">
+                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <a href="sc.chinaz.com">laboris nisi ut aliquip</a> ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <a href="sc.chinaz.com">Excepteur sint occaecat</a> cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br /><br />
+                     <img src="images/middle_banner.gif" alt="" title="" />
+              </div>
+              
+              	<div id="gray_box_border">
+                  	<div id="gray_box_content">
+                   	<h3>Lorem ipsum dolor sit amet</h3>
+                 		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco:
+                       
+                          <div id="sublist">
+                              <ul>
+                                  <li>totam rem aperiam</li>
+                                  <li>qui ratione voluptatem sequi nesciunt</li>
+                                  <li>totam rem aperiam</li>
+                                  <li>qui ratione voluptatem sequi nesciunt</li>
+                                   <li>totam rem aperiam</li>
+                                  <li>qui ratione voluptatem sequi nesciunt</li>
+                                  <li>totam rem aperiam</li>
+                                  <li>qui ratione voluptatem sequi nesciunt</li>                                                                 
+                              </ul>
+                          </div>
+                       </div>
+                       
+                  </div>  
+              
+              <div class="title">Sed ut perspiciatis unde omnis iste natus</div>
+              <div class="text_content">
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+              </div>
+              
+          </div>
+          <div id="right_section">
+              	<div class="title2">社区新闻</div>
+                  <div class="text_content2">
+                     Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                  </div>
+                  <div class="read_more_box">
+                  <a href="sc.chinaz.com"><img src="images/read_more.gif" width="59" height="16" border="0" alt="more" class="more" /></a>
+                  </div>
+                  
+                  	<div id="custom">
+                      <a href="sc.chinaz.com"><img src="images/custom.gif" width="227" height="92" border="0" alt="more" class="more" /></a>
+                      </div>
+                  
+                  <div class="title2">服务中心</div>
+                  <div class="text_content2">
+                  <h2>Sed ut perspiciatis</h2>
+                     Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                  </div>
+                  <div class="read_more_box">
+                  <a href="sc.chinaz.com"><img src="images/read_more.gif" width="59" height="16" border="0" alt="more" class="more" /></a>
+                  </div>
+                                    
+                		
+          </div>
+    </div> 
+</div>
