Factor out page templation

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,10 @@
+<%=provide(:title,'About') %>
+<!-- <!DOCTYPE html>
+<html>
+  <head>
+    <title>BingWen | About</title>
+  </head>
+  <body>
+ -->	
 <h1>About Us</h1>
 <p>This is about us !</p>
