--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
+<%= provide(:title,'Home') %>
+<!-- <!DOCTYPE html>
+<html>
+  <head>
+    <title>BingWen | <%= yield(:title) %></title>
+  </head>
+  <body>
+ -->	
 <h1>Sample App</h1>
-<p><a href="http://127.0.0.1:8080">NeighborHood BinWen</a></p>
+<p>
+	<a href="http://127.0.0.1:8080">Neighborhood BinWen</a>
+</p>
+<!--   </body>
+</html>
+ -->
