--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,12 @@
+<% provide(:title,'Contact') %>
+<!-- <!DOCTYPE html>
+<html>
+  <head>
+    <title>BingWen | <%= yield(:title) %></title>
+  </head>
+  <body>
+ -->	
 <h1>Contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<p>
+	Find me in app/views/pages/contact.html.erb
+</p>
