--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<h1>Sample App</h1>
+<h1>Bingwen</h1>
 <p>
 	<a href="http://127.0.0.1:8080">Neighborhood BinWen</a>
 </p>
+<%= link_to "Sign up now !",users_signup_path,:class=>"signup_button round" %>
