No finished convert page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
-<!doctype html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title><%= full_title(yield(:title))%></title>
 	<%= csrf_meta_tag %>
 	<%= render 'layouts/stylesheets' %>
@@ -13,5 +14,119 @@
 		</section>
 		<%=render 'layouts/footer' %>
 	</div>
+</body>
+</html>
+<!-- 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
+<title>滨文苑</title>
+<link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+<body>
+
+<div id="main_content">
+        <div class ="person">
+            <div>
+                <ul class="menu">
+                    <li><a href="sc.chinaz.com" class="nav">我的家园</a></li>
+                    <li><a href="sc.chinaz.com" class="nav">个人中心</a></li>
+                    <li><a href="sc.chinaz.com" class="nav">登陆</a></li>
+                    <li><a href="sc.chinaz.com" class="nav">注册</a></li>
+                </ul>
+            </div>
+        </div>
+
+		<div id="top_banner">
+       		<div id="left_logo"><a href="index.html"><img src="images/logo.gif" border="0" alt="logo" /></a></div>
+        </div>
+        
+        <div id="page_content">
+            <div>
+                <ul class="menu">
+                    <li><a href="sc.chinaz.com" class="nav">首页</a></li>
+                    <li><a href="sc.chinaz.com" class="nav_even">社区新闻</a></li>
+                    <li><a href="sc.chinaz.com" class="nav">社区服务</a></li>
+                    <li><a href="sc.chinaz.com" class="nav_even">业委会</a></li>
+                    <li><a href="sc.chinaz.com" class="nav">社区论坛</a></li>
+                    <li><a href="sc.chinaz.com" class="nav_even">事物公决</a></li>
+                </ul>
+            </div>
+            
+                
+            <div id="left_section">
+            	<div class="title">滨文苑，欢迎您！</div>
+                <div class="text_content">
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <a href="sc.chinaz.com">laboris nisi ut aliquip</a> ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <a href="sc.chinaz.com">Excepteur sint occaecat</a> cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br /><br />
+                       <img src="images/middle_banner.gif" alt="" title="" />
+                </div>
+                
+                	<div id="gray_box_border">
+                    	<div id="gray_box_content">
+                     	<h3>Lorem ipsum dolor sit amet</h3>
+                   		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco:
+                         
+                            <div id="sublist">
+                                <ul>
+                                    <li>totam rem aperiam</li>
+                                    <li>qui ratione voluptatem sequi nesciunt</li>
+                                    <li>totam rem aperiam</li>
+                                    <li>qui ratione voluptatem sequi nesciunt</li>
+                                     <li>totam rem aperiam</li>
+                                    <li>qui ratione voluptatem sequi nesciunt</li>
+                                    <li>totam rem aperiam</li>
+                                    <li>qui ratione voluptatem sequi nesciunt</li>                                                                 
+                                </ul>
+                            </div>
+                         </div>
+                         
+                    </div>  
+                
+                <div class="title">Sed ut perspiciatis unde omnis iste natus</div>
+                <div class="text_content">
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                </div>
+                
+            </div>
+            <div id="right_section">
+                	<div class="title2">社区新闻</div>
+                    <div class="text_content2">
+                       Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                    </div>
+                    <div class="read_more_box">
+                    <a href="sc.chinaz.com"><img src="images/read_more.gif" width="59" height="16" border="0" alt="more" class="more" /></a>
+                    </div>
+                    
+                    	<div id="custom">
+                        <a href="sc.chinaz.com"><img src="images/custom.gif" width="227" height="92" border="0" alt="more" class="more" /></a>
+                        </div>
+                    
+                    <div class="title2">服务中心</div>
+                    <div class="text_content2">
+                    <h2>Sed ut perspiciatis</h2>
+                       Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                    </div>
+                    <div class="read_more_box">
+                    <a href="sc.chinaz.com"><img src="images/read_more.gif" width="59" height="16" border="0" alt="more" class="more" /></a>
+                    </div>
+                                    
+                		
+                </div>
+        
+
+</div>
+<div id="footer">
+		<div class="footer_links">
+                <a href="sc.chinaz.com" title="">首页 </a>
+                <a href="sc.chinaz.com" title="">关于滨文苑</a>
+                <a href="sc.chinaz.com" title="">服务</a>
+                <a href="sc.chinaz.com" title="">联系我们</a>       
+        </div>
+    	<div class="copyright">
+        <a href="sc.chinaz.com">陈辉出品</a>
+        </div>
+</div>
+
 </body>
 </html>
