--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,6 @@
-<%=provide(:title,'About') %>
+<%=provide(:title,'关于滨文苑') %>
 
-<h1>About Us</h1>
-<p>This is about us !</p>
+<div class="center hero-unit">
+	<h1>About Us</h1>
+	<p>This is about us !</p>
+</div>
