--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,8 @@
-<% provide(:title,'Contact') %>
-<h1>Contact</h1>
-<p>
-	Find me in app/views/pages/contact.html.erb
-</p>
+<% provide(:title,'联系我们') %>
+
+<div class="center hero-unit">
+	<h1>Contact</h1>
+	<p>
+		Find me in app/views/pages/contact.html.erb
+	</p>
+</div>
