--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
-<%= provide(:title,'Sign up') %>
-<h1>Sign up</h1>
-<p></p>
+<%= provide(:title,'注册') %>
+<div class="center hero-unit">
+	<h1>注册</h1>
+	<p></p>
+</div>
