--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,17 @@
 	<%= javascript_include_tag "application" %>
 	<%= csrf_meta_tag %>
   <%= render 'layouts/shim' %>
- </head>     
-  <body>
-    <%= render 'layouts/header' %>
-  	<div class="container">
-  		<%= yield %>
-  	</div>
+</head>     
+<body>
+  <%= render 'layouts/header' %>
+  <div class="container">
+    <%= flash.each do |key,value| %>
+    <div class="alert alert-<%= key %>"><%= value %></div>
+    <% end %>
+    <%= yield %>
     <%= render 'layouts/footer' %>
-  </body>
-  </html>
+    <%= debug(params) if Rails.env.development? %>
+  </div>
+
+</body>
+</html>
