--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,11 +12,24 @@
           <li><%= link_to "社区论坛",'#' %></li>
           <li><%= link_to "事物公决",'#' %></li>
           <li><%= link_to "社区微博",'#' %></li>
-          <li><%= link_to "个人中心",'#' %></li>
-          <li><%= link_to "登陆",'#' %></li>
-          <li><%= link_to "注册",users_signup_path %></li>
-        </ul>   
-      </nav>
-    </div>
-  </div>
-</header>
+          <% if signed_in? %>
+          <li><%= link_to "用户",'#' %></li>
+          <li id="fat_menu" class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">账户<b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+             <li><%= link_to "个人中心",current_user %></li>
+             <li><%= link_to "设置",'#' %></li>
+             <li class="divider"></li>
+             <li>
+               <%= link_to "注销",signout_path,method:"delete" %>
+             </li>
+           </ul>
+           <% else %>
+           <li><%= link_to "登陆",signin_path %></li>
+           <% end %>
+         </ul>   
+       </nav>
+     </div>
+   </div>
+ </header>
