--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,18 @@
 </head>     
 <body>
   <%= render 'layouts/header' %>
+  
   <div class="container">
     <%= flash.each do |key,value| %>
-      <%= content_tag(:div,value,class:"alert alert-#{key}") %>
+    <%= content_tag(:div,value,class:"alert alert-#{key}") %>
     <% end %>
-    <%= yield %>
-    <%= render 'layouts/footer' %>
-    <%= debug(params) if Rails.env.development? %>
-  </div>
+    <div class="center hero-unit"> 
+      <%= yield %>
+    </div>
+  </div> 
+  <%= render 'layouts/footer' %>
+  <%= debug(params) if Rails.env.development? %>
+
 
 </body>
 </html>
