--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
             </a>
             <ul class="dropdown-menu">
              <li><%= link_to "个人中心",current_user %></li>
-             <li><%= link_to "设置",'#' %></li>
+             <li><%= link_to "设置",edit_user_path(current_user) %></li>
              <li class="divider"></li>
              <li>
                <%= link_to "注销",signout_path,method:"delete" %>
