--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -169,4 +169,15 @@ input {
   @extend .error;
 }
 
-
+.users{
+  list-style:none;
+  margin:0;
+  li{
+    overflow:auto;
+    padding:10px 0;
+    border-top: 1px solid $grayLighter;
+    &:last-child {
+      border_botten:1px  solid  $grayLighter;
+    }
+  }
+}
