--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
           <li><%= link_to "事物公决",'#' %></li>
           <li><%= link_to "社区微博",'#' %></li>
           <% if signed_in? %>
-          <li><%= link_to "用户",'#' %></li>
+          <li><%= link_to "用户",users_path %></li>
           <li id="fat_menu" class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">账户<b class="caret"></b>
             </a>
