--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,25 @@
-  <h1>Welcome to the Sample App</h1>
+<% if signed_in? %>
 
+	<div class="row" >
+		<aside class="span4">
+			<section>
+				<%=render 'shared/user_info' %>
+			</section>
+			<section>
+				<%= render 'shared/micropost_form' %>
+			</section>
+		</aside>
+		<div class="span16" >
+			<h3>Micropost Feed</h3>
+			<%= render 'shared/feed'	%>
+		</div>
+
+	</div>
+
+
+<% else %>	
+
+  <h1>Welcome to the Sample App</h1>
   <h2>
   	This is the home page for the
   	<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
@@ -7,6 +27,6 @@
   </h2>
 
   <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
-
+<% end %>
 
 
