--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> -->
 	<title><%= full_title(yield(:title))%></title>
 	<%= stylesheet_link_tag "application",media:"all" %>
-	<%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag "custom",media:"all" %>
+  <%= javascript_include_tag :application %>
 	<%= csrf_meta_tag %>
   <%= render 'layouts/shim' %>
 </head>     
