--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,10 +6,13 @@
 				<%=render 'shared/user_info' %>
 			</section>
 			<section>
+				<%= render 'shared/stats' %>
+			</section>
+			<section>
 				<%= render 'shared/micropost_form' %>
 			</section>
 		</aside>
-		<div class="span16" >
+		<div class="span24" >
 			<h3>Micropost Feed</h3>
 			<%= render 'shared/feed'	%>
 		</div>
