--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,8 @@
   <div class="navbar-inner">
     <div class="container">
       <nav>
-        <ul class="nav pull-right">
-          <li><%= link_to image_tag("logo.gif",alt:"滨文苑"),'#' %></li>
+        <ul class="nav pull-left">
+          <!-- <li><%= link_to image_tag("logo.gif",alt:"滨文苑"),'#' %></li> -->
           <li><%= link_to "首页",root_path %></li>
           <li><%= link_to "社区新闻",'#' %></li>
           <li><%= link_to "社区服务",'#' %></li>
