--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <% if signed_in? %>
 
-	<div class="row" >
+	<div class="row-fluid" >
 		<aside class="span4">
 			<section>
 				<%=render 'shared/user_info' %>
@@ -12,7 +12,7 @@
 				<%= render 'shared/micropost_form' %>
 			</section>
 		</aside>
-		<div class="span24" >
+		<div class="span8" >
 			<h3>Micropost Feed</h3>
 			<%= render 'shared/feed'	%>
 		</div>
