--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, @title) %>
-<div class="row">
+<div class="row-fluid">
   <aside class="span4">
     <section>
       <%= gravatar_for @user %>
